--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
       <img src="IMG-20251102-WA0021.jpg" alt="Aaron 2">
       <img src="IMG-20251102-WA0022.jpg" alt="Aaron 3">
       <img src="IMG-20251102-WA0023.jpg" alt="Aaron 4">
+      <div class="video">
+        <h2>Coming soon</h2>
+      <video src="smoke logo 3.mp4" controls alt="coming soon"></video>
+      </div>
     </div>
   </section>
 
