--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
     </p>
   </section>
 
-  <div class="video">
+  <div class="video" >
         <h2>Coming soon</h2>
       <video src="smoke logo 3.mp4" controls alt="coming soon"></video>
+      <h2 class="gmail">Contact us on email</h2>
+      <a href="mailto:licensing@whisperscent.com">Email 1</a>
+      <a href="mailto:info@whisperscent.com">Email 2</a>
       </div>
 
   <!-- Gallery Section -->
