--- a/index.html
+++ b/index.html
@@ -1,95 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aaron Cobbinah | Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Aaron Cobbinah's personal website">
+  <meta name="keywords" content="Aaron Cobbinah, personal website, portfolio">
+  <meta name="author" content="Aaron Cobbinah">
+  <link rel="stylesheet" href="style.css">
+  <title>Aaron Cobbinah</title>
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <nav>
-      <h1 class="logo">Aaron<span>Cobbinah</span></h1>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#vision">Vision</a></li>
-        <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-text">
-      <h2>Hello, I'm <span>Aaron Cobbinah</span></h2>
-      <p>A passionate <strong>Graphic Designer</strong> from Ghana who turns ideas into visual art.</p>
-      <a href="#contact" class="btn">Contact Me</a>
+  <div class="container">
+    <div class="home">
+      <h1>Aaron Cobbinah</h1>
+      <h2><span>Tech-Innovator</span> - <span class="span-2">Entrepreneur</span> - <span class="span-2">Future Builder</span> - <span class="span-3">CEO of Xerlent</span></h2>
     </div>
-    <div class="hero-image">
-      <img src="images/aaron1.jpg" alt="Aaron Cobbinah portrait">
+    <div class="sub-heading">
+      <p>Creating cutting-edge solutions in Software, AI, Robotics, and Digital Technology.</p>
     </div>
-  </section>
+  </div>
 
-  <!-- About Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      I’m Aaron Cobbinah, a passionate graphic designer from Takoradi, Ghana, born on 16th July 1999.
-      I completed my basic education at Believers International School in 2014, and continued my secondary
-      education at Saint Augustine’s College, graduating in 2017. I pursued higher education at GIMPA (Ghana
-      Institute of Management and Public Administration) and completed in 2021.
-    </p>
-    <p>
-      My journey as a designer is driven by creativity, precision, and a strong desire to bring ideas to life
-      through visuals.
-    </p>
-  </section>
-
-  <!-- Vision Section -->
-  <section id="vision">
-    <h2>My Vision</h2>
-    <p>
-      My ultimate goal is to gather young African developers and creatives to build the biggest and best tech company in Africa —
-      one that can compete globally and inspire innovation across the continent.
-    </p>
-    <p>
-      I'm currently seeking passionate people to join this journey. Together, we can change Africa's tech future.
-    </p>
-  </section>
-
-  <div class="video" >
-        <h2>Coming soon</h2>
-      <video src="smoke logo 3.mp4" controls alt="coming soon"></video>
-      <h2 class="gmail">Contact us on email</h2>
-      <a href="mailto:licensing@whisperscent.com">Email 1</a>
-      <a href="mailto:info@whisperscent.com">Email 2</a>
-      </div>
-
-  <!-- Gallery Section -->
-  <section id="gallery">
-    <h2>Gallery</h2>
-    <div class="gallery-grid">
-      <img src="IMG-20251102-WA0013.jpg" alt="Aaron 1">
-      <img src="IMG-20251102-WA0021.jpg" alt="Aaron 2">
-      <img src="IMG-20251102-WA0022.jpg" alt="Aaron 3">
-      <img src="IMG-20251102-WA0023.jpg" alt="Aaron 4">
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Interested in collaborating or joining my vision? Let’s talk!</p>
-    <a href="https://wa.me/233532952992" target="_blank" class="btn whatsapp">Message Me on WhatsApp</a>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Aaron Cobbinah. Designed by Leon Acquaye.</p>
-  </footer>
-
-  <script src="script.js"></script>
+  <div class="aboutme-container container">
+    <h1>About Me</h1>
+    <p>I build technology that solves real problems, empowers communities, and shapes the future of Africa and opportunities for the youth and the next generation coming</p>
+  </div>
 </body>
 </html>
