--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <div class="aboutme-container container">
     <h1>About Me</h1>
     <p>I build technology that solves real problems, empowers communities, and shapes the future of Africa and opportunities for the youth and the next generation coming</p>
+    <a href="mailto:ceo@xerlent.com">Email me</a>
   </div>
+
+  <a href="about.html">About me</a>
 </body>
 </html>
