--- a/about.html
+++ b/about.html
@@ -1,26 +1,92 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who i am</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Aaron Cobbinah</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
-<body class="about-me">
-    <div class="my-container">
-        <div class="introduction container about">
-            <h2>INTRODUCTION</h2>
-            <p>I am Aaron Cobbinah, a visionary tech Entrepreneurdriven by a
-                passion for innovation, digital transformation, and the creation of impactful
-                technonlogy. My work spans across software development, artificial intelligence, robotics,
-                mobility technology, and digital. i believe in building solution that scale -- solution that empower people, inspire progress, and redefine what's possible.
-            </p>
-        </div>
+<body>
+    <header class="header">
+        <h1>About Me</h1>
+    </header><section class="about-section">
+    <h2>Who I Am</h2>
+    <p>
+        I am Aaron Cobbinah, a visionary tech entrepreneur driven by a passion
+        for innovation, digital transformation, and the creation of impactful
+        technology. My work spans across software development, artificial
+        intelligence, robotics, mobility technology, and digital product
+        design. I believe in building solutions that scale—solutions that
+        empower people, inspire progress, and redefine what’s possible.
+    </p>
+    <p>
+        My mission is simple: to build technologies that solve real problems
+        and elevate everyday life. I am focused on creating products and
+        platforms that push boundaries, accelerate innovation across Africa,
+        and compete confidently on the global stage, while creating jobs and
+        opportunities for the young ones.
+    </p>
+    <p>
+        I am fueled by curiosity, creativity, and the desire to leave a
+        lasting impact. Every project I work on is guided by a commitment to
+        excellence, authenticity, and the belief that the future belongs to
+        those who build it.
+    </p>
 
-        <div class="mission container about">
-            <h2>Mission</h2> 
-            <p>My mission is simple: to build technologies that solve real problems and elevate everyday life. I am focused on creating products and platforms that push boundaries, accelerate innovation across Africa, and compete confidently on the global stage and also, create jobs and opportunities for the young ones and opportunities.</p>
-        </div>
+    <div class="core-values">
+        <h3>Core Values</h3>
+        <ul>
+            <li>Innovation — Always pushing boundaries</li>
+            <li>Impact — Building solutions that matter</li>
+            <li>Excellence — Delivering world-class quality</li>
+            <li>Integrity — Doing the right thing</li>
+            <li>Ambition — Thinking global, building global</li>
+        </ul>
     </div>
+</section>
+
+<section class="expertise-section">
+    <h2>What I Do</h2>
+    <p>
+        I specialize in designing and developing digital solutions that
+        transform industries and accelerate growth.
+    </p>
+
+    <div class="expertise-list">
+        <h3>Key Expertise Areas</h3>
+        <ol>
+            <li>
+                <strong>Software Development</strong><br />Building secure,
+                modern, and scalable software for mobile, web, and enterprise
+                systems.
+            </li>
+            <li>
+                <strong>Artificial Intelligence & Automation</strong><br />Designing
+                intelligent systems that automate workflows, optimize
+                decision-making, and unlock new possibilities.
+            </li>
+            <li>
+                <strong>Robotics & Hardware Innovation</strong><br />Building
+                and conceptualizing smart machines, futuristic devices, and
+                robotics-driven solutions.
+            </li>
+            <li>
+                <strong>Digital Product Strategy</strong><br />Turning ideas
+                into powerful tech products through design, strategy, and
+                execution.
+            </li>
+            <li>
+                <strong>Mobile App Innovation</strong><br />Creating
+                user-friendly, intelligent mobile apps with real-world
+                impact.
+            </li>
+            <li>
+                <strong>Business & Startup Development</strong><br />Helping
+                founders and teams build sustainable, tech-driven
+                businesses.
+            </li>
+        </ol>
+    </div>
+</section>
+
 </body>
-</html>
+</
