--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Aaron Cobbinah</title>
 </head>
-<body>
+<body class="body-1">
   <div class="container">
     <div class="home">
       <h1>Aaron Cobbinah</h1>
